--- a/CrewChiefV4/PitManager/PitManagerEventHandlersTable_RF2.tt
+++ b/CrewChiefV4/PitManager/PitManagerEventHandlersTable_RF2.tt
@@ -1,12 +1,12 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ assembly name="System.Core" #>
 <#@ template language="C#" #>
 <#@ output extension=".cs" #>
 <#@ import namespace="System" #>
 <#@ import namespace="System.IO" #>
 <#@ import namespace="System.Linq" #>
-<#  
-    string csvPath = @"CrewChiefV4\PitManager\GamePitManagerDict.csv";
+<#
+    string csvPath = this.Host.ResolvePath(@"GamePitManagerDict.csv");
 
     string[] csvLines = File.ReadAllLines(csvPath);
 #>
